# Dell-Boca-Boys_v2

./: AGENT_REBRAND_MAPPING.md  CLOUD_DEPLOYMENT_STRATEGY.md  CLOUD_DEPLOYMENT_SUMMARY.md  README.md  UI_ANALYSIS_CUSTOMER_VS_ADMIN.md  WORKFLOW_AUTOMATION_VERIFICATION.md
Dell-Boca-Boys-main/: .env.example  .gitignore  AUDIT_INDEX.md  BRANDING_UPDATE_SUMMARY.md  CODE_GENERATION_INTEGRATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SETUP.sh  COMPREHENSIVE_AUDIT_REPORT.md  DELL_BOCA_VISTA_ECOSYSTEM.md  DEPLOYMENT_GUIDE.md  DESKTOP_DEPLOYMENT.md  DUAL_LEARNING_ARCHITECTURE.md  Dockerfile  EJWCS Framework_ Multi#U2011Tenant, Modular Workflow Orchestration with LLM Integration.docx  EJWCS_CODE_ANALYSIS.md  EJWCS_VALIDATION_INDEX.md  EJWCS_VALIDATION_REPORT.md  EJWCS_VALIDATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  Enhanced Learning & Implementation Schedule for Symbiotic Recursive Cognition (SRC-II).docx  GLM45_VALIDATION_REPORT.md  GLM45_VALIDATION_SUMMARY.md  GOOGLE_DRIVE_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_ALL_PHASES.md  INDEX.md  INTEGRATION_ANALYSIS.md  INTEGRATION_ROADMAP.md  INTEGRATION_SUMMARY.md  MULTIMEDIA_INTEGRATION_SUMMARY.md  MULTIMEDIA_RECORDING.md  N8N_AGENT_VALIDATION_REPORT.md  NEXT_STEPS.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  PhD_LEVEL_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  (+36 more)
Dell-Boca-Boys-main/.github/workflows/: build.yml  deploy.yml  security.yml  test.yml
Dell-Boca-Boys-main/EJWCS_ScraperPack_v1/: README.md  requirements.txt
Dell-Boca-Boys-main/EJWCS_ScraperPack_v1/examples/: parse_fixture.py
Dell-Boca-Boys-main/EJWCS_ScraperPack_v1/scraper/: models.py
Dell-Boca-Boys-main/NYFS_Suite_v1/: ISSUES_AND_FIXES.md  README.md  VALIDATION_INDEX.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt
Dell-Boca-Boys-main/NYFS_Suite_v1/docs/: GO_TO_MARKET.md  SECURITY.md  USER_GUIDE.md
Dell-Boca-Boys-main/NYFS_Suite_v1/excel/: NYFS_Base.xlsx
Dell-Boca-Boys-main/NYFS_Suite_v1/nyfs_suite/: __init__.py  aging.py  cli.py  forecast.py  gl.py  insights.py  io.py  kpis.py  schema.py  statements.py  utils.py
Dell-Boca-Boys-main/NYFS_Suite_v1/sample_data/: ap_entries.csv  ar_entries.csv  cashbook.csv  chart_of_accounts.csv  customers.csv  items.csv  vendors.csv
Dell-Boca-Boys-main/NYFS_Suite_v1/tests/: test_smoke.py
Dell-Boca-Boys-main/NYFS_Suite_v1/vba/: NYFS_Aging.bas  NYFS_Menu.bas  NYFS_Refresh.bas
Dell-Boca-Boys-main/api/: dashboard_api.py
Dell-Boca-Boys-main/app/middleware/: security.py
Dell-Boca-Boys-main/compliance/: governance.py
Dell-Boca-Boys-main/core/: circuit_breaker.py  exceptions.py  llm_router.py  metrics.py  rate_limiter.py  rbac.py  secrets_manager.py  tasks.py  workflow_repository.py
Dell-Boca-Boys-main/core/cache/: __init__.py  redis_cache.py  strategies.py
Dell-Boca-Boys-main/core/communication/: README.md  __init__.py  email_client.py  email_monitor.py  email_service.py  email_task_router.py
Dell-Boca-Boys-main/core/intelligence/: __init__.py  cesar_multi_agent_network.py  collective_intelligence_framework.py
Dell-Boca-Boys-main/core/mcp/: __init__.py  cards.py  codeexec.py  knowledge.py  policy.py  triangulator.py  workflow.py
Dell-Boca-Boys-main/core/memory/: __init__.py  enhanced_memory_manager.py
Dell-Boca-Boys-main/core/persona/: terry_framework.py
Dell-Boca-Boys-main/core/websocket/: __init__.py  manager.py
Dell-Boca-Boys-main/dashboard/: DEPLOYMENT.md  README.md  next.config.js  package.json  tailwind.config.ts
Dell-Boca-Boys-main/docs/: EMAIL_COMMUNICATION_GUIDE.md
Dell-Boca-Boys-main/glm4.5-air-mlx-4bit/: README.md  config.json
Dell-Boca-Boys-main/n8n-agent-dell-bocca-vista/: README.md
Dell-Boca-Boys-main/operations/: dramatiq-worker.service.example  orchestration.md
Dell-Boca-Boys-main/scripts/: build.sh  chiccki_cli.sh  continuous_learning_worker.py  crawl_docs.py  crawl_templates.py  create_vector_indexes.py  generate_daily_summary.py  ingest_resources.py  init_db.sql  load_embeddings.py  monitor_learning_system.py  setup_dual_learning.py  setup_ultimate_learning.py  test_gdrive_sync.py  test_learning_system.py  verify_integration.py
Dell-Boca-Boys-main/skills/: skill_manager.py
Dell-Boca-Boys-main/tests/: conftest.py  test_agent.py  test_email_communication.py  test_workflow_engine.py
Dell-Boca-Boys-main/web_dashboard/: api.py  scheduler.py  workflow_engine.py
(+217 files in other folders)
