[project]
name = "n8n-autonomous-agent"
version = "1.0.0"
description = "Autonomous AI agent for creating world-class n8n workflows"
authors = [
    {name = "n8n Agent Development Team"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "python-multipart==0.0.9",

    # Database & Vectors
    "psycopg[binary]==3.2.1",
    "pgvector==0.2.5",
    "redis==5.0.8",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",

    # HTTP & Web Scraping
    "requests==2.32.3",
    "httpx==0.27.2",
    "trafilatura==1.9.0",
    "beautifulsoup4==4.12.3",
    "urllib3==2.2.3",

    # Retry & Resilience
    "tenacity==9.0.0",

    # Data Validation & Serialization
    "pydantic==2.9.2",
    "jsonschema==4.23.0",

    # Task Queue & Telemetry
    "dramatiq[redis]==1.16.0",
    "prometheus-client==0.21.0",
    "cryptography==43.0.1",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",

    # AI & ML
    "smolagents[openai]==1.22.0",
    "sentence-transformers==3.2.1",
    "tiktoken==0.7.0",
    "torch==2.4.0",
    "transformers==4.44.2",

    # Memory & Intelligence (CESAR.AI integration)
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",

    # Data Processing
    "numpy==1.26.4",
    "pandas==2.2.3",

    # Logging & Monitoring
    "structlog==24.2.0",

    # YouTube Transcripts
    "youtube-transcript-api==0.6.2",

    # Secrets Management (Workflow-Knowledge-Suite)
    "hvac>=2.3.0",

    # CLI & Utilities
    "click==8.1.7",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "ruamel.yaml>=0.18.6",

    # Skills Node Suite
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "mypy==1.11.2",
    "ipython==8.26.0",
]

analytics = [
    # Process mining and workflow intelligence
    "pm4py==2.7.9",
    "networkx==3.3",
    "neo4j==5.23.1",
    "polars==1.5.0",
    "dowhy==0.11.1",
    "econml==0.15.1",
    "scikit-learn==1.5.2",
    "bertopic==0.16.4",
    "hdbscan==0.8.38",
    "kafka-python==2.0.2",
    "temporalio==1.7.0",
    "mlflow==2.16.0",
]

ingestion = [
    "google-api-python-client==2.149.0",
    "google-auth==2.35.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0",
]

ui_automation = [
    # Desktop GUI automation (CESAR.AI UI-TARS)
    "pyautogui>=0.9.54",
    "opencv-python>=4.10.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.4.0",
    "google-generativeai>=0.5.4",
]

terminal_ui = [
    # Terminal interface (Jerry-Sheppardini)
    "textual>=0.66.0",
    "chatterbox-tts>=0.1.2",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
]

all = [
    "n8n-autonomous-agent[analytics,ingestion,ui_automation,terminal_ui]",
]

[project.scripts]
n8n-agent = "app.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = [
    "app/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
